# claude-launcher-app

./: .gitignore  BRIEF.md  CLAUDE.md  README.md  ROADMAP.md  config-schema.json  index.html  launcher.ps1  package-lock.json  package.json  retrospective-patterns.md
.claude/commands/: _common-rules.md  _scaffolds.md  agent-builder.md  agent-testeur.md  audit.md  project-config.template.md  push.md  retro.md  setup.md  specflow.md
.claude/pipeline/retrospective/: changelog.md  metrics.md
.github/workflows/: build.yml
lib/Config/: ConfigLoader.ps1  ConfigSchema.ps1
lib/Core/: Daemon.ps1  HistoryTracker.ps1  InitialCommands.ps1  SessionManager.ps1  SmartPresets.ps1
lib/Git/: GitInfo.ps1
lib/Scanner/: ProjectScanner.ps1
lib/TUI/: App.ps1  DepsManager.ps1  LaunchFlow.ps1  Logger.ps1  PresetSelector.ps1  ProjectList.ps1  Theme.ps1
lib/Terminal/: WtBuilder.ps1
scripts/: bump-version.mjs
src/: App.css  App.tsx  index.css  terminalRefs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  conpty.rs  error.rs  git.rs  history.rs  lib.rs  main.rs  pty.rs  scanner.rs  session.rs  terminal.rs
src/components/: AppLayout.css  AppLayout.tsx  LayoutPreview.css  LayoutPreview.tsx  OnboardingWizard.css  OnboardingWizard.tsx  PreferencesEditor.css  PreferencesEditor.tsx  PresetDetail.css  PresetDetail.tsx  PresetEditor.css  PresetEditor.tsx  PresetList.css  PresetList.tsx  ProjectCard.css  ProjectCard.tsx  ProjectDetail.css  ProjectDetail.tsx  ProjectEditor.css  ProjectEditor.tsx  ProjectList.css  ProjectList.tsx  SettingsPanel.css  SettingsPanel.tsx  Sidebar.css  Sidebar.tsx  SidebarSection.css  SidebarSection.tsx  SplitLayout.css  SplitLayout.tsx  StatusBar.css  StatusBar.tsx  TabBar.css  TabBar.tsx  Terminal.css  Terminal.tsx  TerminalPane.css  TerminalPane.tsx  Titlebar.css  Titlebar.tsx
src/hooks/: useHotkeys.ts  useRelativeTime.ts  useTauriEvent.ts
src/stores/: config.ts  diagnostics.ts  history.ts  launch.ts  projects.ts  terminals.ts  theme.ts  ui.ts
src/types/: ipc.ts
