[package]
name = "claude-launcher"
version = "0.1.0"
description = "Desktop app for managing multi-terminal Claude Code workspaces"
authors = ["jsoulet"]
edition = "2021"

[lib]
name = "claude_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
