[package]
name = "claude-launcher"
version = "2.0.0"
description = "Desktop app for managing multi-terminal Claude Code workspaces"
authors = ["jsoulet"]
edition = "2021"

[lib]
name = "claude_launcher_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.19", features = ["vendored-libgit2"] }
dunce = "1"
walkdir = "2"
portable-pty = "0.8"
